--- a/style.css
+++ b/style.css
@@ -14,12 +14,12 @@ select {
   font-size: 15px;
 }
 
-.body {
+.body,
+h1 {
   margin: 0;
 }
 
-h1 {
-  margin: 0;
+body {
   padding-bottom: 20px;
 }
 
