--- a/style.css
+++ b/style.css
@@ -22,13 +22,14 @@ h1 {
 
 body {
   padding-bottom: 20px;
+  font-family: var(--main-font);
 }
 
 .container {
-  width: 50vw;
+  width: 50%;
   padding: 60px;
   font-size: 1rem;
-  font-family: var(--main-font);
+  border: solid #f7f7f9;
 }
 
 .form-control {
