--- a/style.css
+++ b/style.css
@@ -30,6 +30,9 @@ body {
   padding: 60px;
   font-size: 1rem;
   border: solid #f7f7f9;
+  background-color: #f5f5f5f6;
+  border-radius: 25px;
+  margin-inline: auto;
 }
 
 .form-control {
